--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,24 +1,19 @@
 ---
-
-plugins:
-  # https://github.com/jest-community/eslint-plugin-jest
-  - jest
-
 # https://eslint.org/docs/user-guide/configuring#specifying-environments
 env:
-  node: true
+    node: true
 
 extends:
-  - 'airbnb-base'
-  - 'plugin:jest/recommended'
+    - 'airbnb-base'
+    - 'prettier'
 
 parserOptions:
-  ecmaVersion: latest
+    ecmaVersion: latest
 
 rules:
-  no-console: 0
-  import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
-    - error
-    - ignorePackages
-    - js: always
-  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
+    no-console: 0
+    import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
+        - error
+        - ignorePackages
+        - js: always
+    no-underscore-dangle: [2, { 'allow': ['__filename', '__dirname'] }]
