--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,19 +1,23 @@
 ---
 # https://eslint.org/docs/user-guide/configuring#specifying-environments
 env:
-    node: true
+  node: true
 
 extends:
-    - 'airbnb-base'
-    - 'prettier'
+  - 'airbnb-base'
+  - 'prettier'
 
 parserOptions:
-    ecmaVersion: latest
+  ecmaVersion: latest
 
 rules:
-    no-console: 0
-    import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
-        - error
-        - ignorePackages
-        - js: always
-    no-underscore-dangle: [2, { 'allow': ['__filename', '__dirname'] }]
+  no-console: 0
+  import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
+    - error
+    - ignorePackages
+    - js: always
+  no-underscore-dangle: [2, { 'allow': ['__filename', '__dirname'] }]
+  quotes:
+    - error
+    - single
+    - { 'avoidEscape': true, 'allowTemplateLiterals': false }
